--- a/src/main/resources/templates/message/total.html
+++ b/src/main/resources/templates/message/total.html
@@ -1,47 +1,141 @@
-<!DOCTYPE HTML>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:include="console/header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>账单总览</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <style type="text/css">
-        table.table-striped tr:nth-child(odd){
-            background: #F4B084;
+        *{
+            margin: 0;
+            padding: 0;
         }
-        table.table-striped tr:nth-child(even) {
-            background: #F8CBAD;
+       .total{
+           background: #4e6ef2;
+       }
+        .total_t{
+            height: 80px;
+            padding: 15px 0;
+            box-sizing: border-box;
+        }
+        .total_t .total_t_l{
+            width: 45%;
+            box-sizing: border-box;
+            height: 50px;
+            display: block;
+            float: left;
+            padding: 0 20px;
+            line-height: 25px;
+            font-size: 16px;
+            color: #fff;
+        }
+        .total_t .total_t_r{
+            width: 55%;
+            box-sizing: border-box;
+            height: 50px;
+            display: block;
+            float: right;
+            padding: 0 20px;
+            line-height: 50px;
+            font-size: 12px;
+            text-align: right;
+            color: #fff;
+        }
+        .total_b{
+            height: 60px;
+        }
+        .total_b p{
+            line-height: 30px;
+            padding: 0 20px;
+            font-size: 14px;
+            color: #a9a9a9;
+            box-sizing: border-box;
+        }
+        .ulList{
+            list-style: none;
+        }
+        .ulList li:nth-of-type(odd){
+            height: 60px;
+            display: block;
+            box-sizing: border-box;
+            padding: 0 20px;
+            background: #fff;
+        }
+        .ulList li:nth-of-type(even){
+            height: 60px;
+            display: block;
+            box-sizing: border-box;
+            padding: 0 20px;
+            background: #f5f5f5;
+        }
+        .ulList li .list_l{
+            width: 30%;
+            height: 60px;
+            display: block;
+            float: left;
+            line-height: 30px;
+            font-size: 14px;
+            color: #666;
+        }
+        .ulList li .list_r{
+            width: 65%;
+            height: 60px;
+            display: block;
+            float: right;
+            line-height: 30px;
+            font-size: 14px;
+            color: #666;
+        }
+        .ulList li .list_r span{
+            width: 100%;
+            height: 30px;
+            display: inline-block;
+            line-height: 30px;
+            font-size: 14px;
+            color: #999;
+            text-align: right;
         }
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-    <table width="100%" border="0">
-        <tr>
-            <td width="60%"><h2>当前总余额</h2></td>
-            <td rowspan="2"><h3 th:text="${total.time}"></h3></td>
-        </tr>
-        <tr>
-            <td>Total Balance Now</td>
-        </tr>
-        <tr>
-            <td colspan="2" ><h1 th:text="${'CNY: '+total.balance}"></h1></td>
-        </tr>
-        <tr>
-            <td colspan="2"><h1 th:text="${'USD: '+total.ubalance}"></h1></td>
-        </tr>
-    </table>
-</nav>
-<table class="table table-striped">
-    <tr th:each="bank:${total.banks}">
-        <td width="70%"><h4 th:text="${bank.bankname}"/></td>
-        <td><h4 th:text="${bank.balance}"/></td>
-    <tr>
-</table>
-<table class="table table-striped">
-    <tr th:each="acct:${total.accounts}">
-        <td width="40%"><h4 th:text="${acct.bankname}"/></td>
-        <td width="30%"><a th:href="${'account/'+acct.accountno}"><h4 th:text="${acct.accountno}"/></a></td>
-        <td width="30%"><h4 th:text="${acct.balance}"/></td>
-    <tr>
-</table>
-<div th:include="console/footer"></div>
+    <div class="total">
+        <div class="total_t">
+            <p class="total_t_l">当前总余额<br>Total Balance Now</p>
+            <p class="total_t_r" id="date"></p>
+        </div>
+        <div class="total_b">
+            <p>Total CNY Amount: 1,245,678</p>
+            <p>Total USD Amount: 2,345,678</p>
+        </div>
+    </div>
+    <ul class="ulList">
+        <li>
+            <p class="list_l">工商银行<br>ICBC</p>
+            <p class="list_r">
+                <span>CNY:1,234,567</span>
+                <span>USD: 3,567</span>
+            </p>
+        </li>
+        <li>
+            <p class="list_l">工商银行<br>ICBC</p>
+            <p class="list_r">
+                <span>CNY:1,234,567</span>
+            </p>
+        </li>
+    </ul>
 </body>
+
+<script>
+    setInterval(function(){
+        var date=new Date();
+        var year=date.getFullYear(); //获取当前年份
+        var mon=date.getMonth()+1; //获取当前月份
+        var da=date.getDate(); //获取当前日
+        var day=date.getDay(); //获取当前星期几
+        var h=date.getHours(); //获取小时
+        var m=date.getMinutes(); //获取分钟
+        var s=date.getSeconds(); //获取秒
+        var d=document.getElementById('date');
+        d.innerHTML=year+'年'+mon+'月'+da+'日'+' '+h+':'+m+':'+s; },
+    1000)
+</script>
 </html>
