--- a/src/main/resources/templates/message/account.html
+++ b/src/main/resources/templates/message/account.html
@@ -156,11 +156,11 @@
     </div>
     <div class="total_b">
         <div class="pDiv">
-            <p>Total CNY Amount:></p>
+            <p>Total CNY Amount:</p>
             <p>1,234</p>
         </div>
         <div class="pDiv">
-            <p>Total USD Amount:></p>
+            <p>Total USD Amount:</p>
             <p>1,234</p>
         </div>
     </div>
