--- a/src/main/resources/templates/message/total.html
+++ b/src/main/resources/templates/message/total.html
@@ -121,11 +121,11 @@
         </div>
         <div class="total_b">
             <div class="pDiv">
-                <p>Total CNY Amount:></p>
+                <p>Total CNY Amount:</p>
                 <p th:text="${total.balance}"></p>
             </div>
             <div class="pDiv">
-                <p>Total USD Amount:></p>
+                <p>Total USD Amount:</p>
                 <p th:text="${total.ubalance}"></p>
             </div>
         </div>
