--- a/src/main/resources/templates/message/account.html
+++ b/src/main/resources/templates/message/account.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>明细查看</title>
@@ -157,31 +159,31 @@
     <div class="total_b">
         <div class="pDiv">
             <p>Total CNY Amount:</p>
-            <p>1,234</p>
+            <p th:text="${account.balance}"></p>
         </div>
-        <div class="pDiv">
-            <p>Total USD Amount:</p>
-            <p>1,234</p>
-        </div>
+        <!--<div class="pDiv">-->
+            <!--<p>Total USD Amount:</p>-->
+            <!--<p>1,234</p>-->
+        <!--</div>-->
     </div>
 </div>
 <ul class="ulList">
-    <li style="background: #67c23a">
-        <p class="list_l" >工商银行<br>ICBC</p>
-        <div class="list_r">
-            <p>CNY:1,234,567</p>
-            <p>USD: 3,567</p>
-        </div>
-    </li>
-    <li style="background: #e6a23c">
-        <p class="list_l" >昨日余额<br>ICBC</p>
-        <div class="list_r">
-            <p>CNY:1,234,567</p>
-            <p>USD: 3,567</p>
-        </div>
-    </li>
+    <!--<li style="background: #67c23a">-->
+        <!--<p class="list_l" >工商银行<br>ICBC</p>-->
+        <!--<div class="list_r">-->
+            <!--<p>CNY:1,234,567</p>-->
+            <!--<p>USD: 3,567</p>-->
+        <!--</div>-->
+    <!--</li>-->
+    <!--<li style="background: #e6a23c">-->
+        <!--<p class="list_l" >昨日余额<br>ICBC</p>-->
+        <!--<div class="list_r">-->
+            <!--<p>CNY:1,234,567</p>-->
+            <!--<p>USD: 3,567</p>-->
+        <!--</div>-->
+    <!--</li>-->
 </ul>
-<ul class="ulList1">
+<ul class="ulList1" th:each="detail:${account.details}">
     <li>
        <div>
            <p>付款人</p>
@@ -189,23 +191,12 @@
            <p>金额</p>
        </div>
         <div>
-            <p>李松</p>
+            <p th:text="${detail.opp}"></p>
             <p>2020-09-01</p>
-            <p>4,567</p>
+            <p th:text="${detail.amount}"></p>
         </div>
     </li>
-    <li>
-        <div>
-            <p>付款人</p>
-            <p>付款时间</p>
-            <p>金额</p>
-        </div>
-        <div>
-            <p>李松</p>
-            <p>2020-09-01</p>
-            <p>4,567</p>
-        </div>
-    </li>
+
 </ul>
 </body>
 
