--- a/src/main/resources/templates/message/account.html
+++ b/src/main/resources/templates/message/account.html
@@ -105,7 +105,7 @@
         .ulList li .list_r p{
             width: 100%;
             height: 30px;
-            display: inline-block;
+            display: block;
             line-height: 30px;
             font-size: 14px;
             color: #666;
