--- a/src/main/resources/templates/message/account.html
+++ b/src/main/resources/templates/message/account.html
@@ -138,11 +138,17 @@
             display: block;
             float: left;
             line-height: 30px;
-            font-size: 14px;
+            font-size: 12px;
             color: #666;
         }
-        .ulList1 li div p:nth-of-type(2){
+        .ulList1 li div p:nth-of-type(1){
             width: 35%;
+            overflow: hidden;
+            text-overflow:ellipsis;
+            white-space: nowrap;
+        }
+        .ulList1 li div p:nth-of-type(2){
+            width: 30%;
         }
         .ulList1 li div p:last-child{
             width: 35%;
