--- a/src/main/resources/templates/msg/account.html
+++ b/src/main/resources/templates/msg/account.html
@@ -104,7 +104,7 @@
         .ulList li .list_r p{
             width: 100%;
             height: 30px;
-            display: inline-block;
+            display: block;
             line-height: 30px;
             font-size: 14px;
             color: #666;
@@ -129,19 +129,26 @@
         }
         .ulList1 li div {
             height: 30px;
-
         }
         .ulList1 li div p{
             width: 30%;
             height: 30px;
             display: block;
+            box-sizing: border-box;
             float: left;
             line-height: 30px;
-            font-size: 14px;
+            font-size: 12px;
             color: #666;
         }
-        .ulList1 li div p:nth-of-type(2){
+        .ulList1 li div p:nth-of-type(1){
             width: 35%;
+            overflow: hidden;
+            text-overflow:ellipsis;
+            white-space: nowrap;
+        }
+        .ulList1 li div p:nth-of-type(2){
+            width: 30%;
+            padding-left: 5px;
         }
         .ulList1 li div p:last-child{
             width: 35%;
