--- a/src/main/resources/templates/msg/account.html
+++ b/src/main/resources/templates/msg/account.html
@@ -190,30 +190,30 @@
     </li>
 </ul>
 <ul class="ulList1" id = "li_details">
-    <li>
-        <div>
-            <p>付款人</p>
-            <p>付款时间</p>
-            <p>金额</p>
-        </div>
-        <div>
-            <p>李松</p>
-            <p>2020-09-01</p>
-            <p>4,567</p>
-        </div>
-    </li>
-    <li>
-        <div>
-            <p>付款人</p>
-            <p>付款时间</p>
-            <p>金额</p>
-        </div>
-        <div>
-            <p>李松</p>
-            <p>2020-09-01</p>
-            <p>4,567</p>
-        </div>
-    </li>
+    <!--<li>-->
+        <!--<div>-->
+            <!--<p>付款人</p>-->
+            <!--<p>付款时间</p>-->
+            <!--<p>金额</p>-->
+        <!--</div>-->
+        <!--<div>-->
+            <!--<p>李松</p>-->
+            <!--<p>2020-09-01</p>-->
+            <!--<p>4,567</p>-->
+        <!--</div>-->
+    <!--</li>-->
+    <!--<li>-->
+        <!--<div>-->
+            <!--<p>付款人</p>-->
+            <!--<p>付款时间</p>-->
+            <!--<p>金额</p>-->
+        <!--</div>-->
+        <!--<div>-->
+            <!--<p>李松</p>-->
+            <!--<p>2020-09-01</p>-->
+            <!--<p>4,567</p>-->
+        <!--</div>-->
+    <!--</li>-->
 </ul>
 </body>
 
@@ -261,7 +261,7 @@
             detailsHtml += "<div>";
             detailsHtml += "<p>"+detail.opp+"</p>";
             detailsHtml += "<p>"+detail.time+"</p>";
-            detailsHtml += "<p>"+detail.balance+"</p>";
+            detailsHtml += "<p>"+detail.amount+"</p>";
             detailsHtml += "</div>";
             detailsHtml += "</li>";
         }
