页面时间优化

--- a/src/main/resources/templates/msg/total.html
+++ b/src/main/resources/templates/msg/total.html
@@ -126,18 +126,18 @@
 </body>
 
 <script>
-    setInterval(function(){
-            var date=new Date();
-            var year=date.getFullYear(); //获取当前年份
-            var mon=date.getMonth()+1; //获取当前月份
-            var da=date.getDate(); //获取当前日
-            var day=date.getDay(); //获取当前星期几
-            var h=date.getHours(); //获取小时
-            var m=date.getMinutes(); //获取分钟
-            var s=date.getSeconds(); //获取秒
-            var d=document.getElementById('date');
-            d.innerHTML=year+'年'+mon+'月'+da+'日'+' '+h+':'+m+':'+s; },
-        1000)
+//    setInterval(function(){
+//            var date=new Date();
+//            var year=date.getFullYear(); //获取当前年份
+//            var mon=date.getMonth()+1; //获取当前月份
+//            var da=date.getDate(); //获取当前日
+//            var day=date.getDay(); //获取当前星期几
+//            var h=date.getHours(); //获取小时
+//            var m=date.getMinutes(); //获取分钟
+//            var s=date.getSeconds(); //获取秒
+//            var d=document.getElementById('date');
+//            d.innerHTML=year+'年'+mon+'月'+da+'日'+' '+h+':'+m+':'+s; },
+//        1000)
 
     $.post("/gee/msg/total.json", function(data) {
         console.log(data);
@@ -145,6 +145,7 @@
 
         $("#total_cny_amount").html("Total CNY Amount: " + res.balance);
         $("#total_usd_amount").html("Total USD Amount: " + res.ubalance);
+        $("#date").html(res.time);
 
         var accounts = res.accounts;
         var accountsHtml= "";
